fixed icp inheritance and convergence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,10 +115,6 @@ endif (LIBUSB_1_LIBRARIES AND LIBUSB_1_INCLUDE_DIRS)
 include_directories(${INCLUDE_PATH})
 include_directories(${GRABBER_PATH})
 
-
-FILE(GLOB_RECURSE SRCFILES ${SOURCE_PATH}/*.cpp )
-FILE(GLOB_RECURSE SRCFILES_GRABBER ${GRABBER_PATH}/*.cpp )
-
-add_executable (pcl_multi_object_recognition pcl_multi_object_recognition.cpp ${SRCFILES} ${SRCFILES_GRABBER})
+  add_executable (pcl_multi_object_recognition pcl_multi_object_recognition.cpp  ${SOURCE_PATH}/Visualizer.cpp  ${SOURCE_PATH}/Cluster.cpp ${SOURCE_PATH}/Keypoints.cpp ${SOURCE_PATH}/Sampling.cpp ${SOURCE_PATH}/Icp.cpp  ${SOURCE_PATH}/Ppfe.cpp ${SOURCE_PATH}/OpenniStreamer.cpp ${SOURCE_PATH}/Error.cpp ${SOURCE_PATH}/find_function.cpp ${SOURCE_PATH}/define.cpp ${SOURCE_PATH}/help.cpp ${SOURCE_PATH}/utils.cpp ${GRABBER_PATH}/registration.cpp)
 
 target_link_libraries( pcl_multi_object_recognition  ${OPENNI_LIBRARY} ${PCL_LIBRARIES} ${Freenect_LIBRARY} )
