--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@
 cmake_minimum_required(VERSION 2.8)
 Project (pcl_multi_object_recognition CXX)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_BUILD_TYPE Release) 
 
 set(INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(GRABBER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include/grabber)
