--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_BUILD_TYPE Release) 
 
 set(INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
-set(GRABBER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include/grabber)
+set(GRABBER_PATH ${INCLUDE_PATH}/grabber)
 set(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)
+set(IMPL_PATH ${INCLUDE_PATH}/impl)
+
 
 #######find Openmp
 find_package(OpenMP)
@@ -115,6 +117,8 @@ endif (LIBUSB_1_LIBRARIES AND LIBUSB_1_INCLUDE_DIRS)
 
 include_directories(${INCLUDE_PATH})
 include_directories(${GRABBER_PATH})
+include_directories(${IMPL_PATH})
+
 
   add_executable (pcl_multi_object_recognition pcl_multi_object_recognition.cpp  ${SOURCE_PATH}/Visualizer.cpp  ${SOURCE_PATH}/Cluster.cpp ${SOURCE_PATH}/Keypoints.cpp ${SOURCE_PATH}/Sampling.cpp ${SOURCE_PATH}/Icp.cpp  ${SOURCE_PATH}/Ppfe.cpp ${SOURCE_PATH}/OpenniStreamer.cpp ${SOURCE_PATH}/Error.cpp ${SOURCE_PATH}/find_function.cpp ${SOURCE_PATH}/define.cpp ${SOURCE_PATH}/help.cpp ${SOURCE_PATH}/utils.cpp ${GRABBER_PATH}/registration.cpp)
 
